--- a/app/src/main/res/layout/content_preferences.xml
+++ b/app/src/main/res/layout/content_preferences.xml
@@ -295,7 +295,8 @@
                     android:id="@+id/constraint_Protein"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp" />
+                    android:layout_marginLeft="10dp"
+                    android:text="xyz"/>
             </LinearLayout>
 
             <TextView
