Except Food Preferences.java

--- a/app/src/main/res/layout/content_preferences.xml
+++ b/app/src/main/res/layout/content_preferences.xml
@@ -274,7 +274,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:onClick="selectItem"
-                android:text="The Sumi Helal Diet" />
+                android:text="Dr. Sumi Helal Diet" />
 
             <View
                 android:layout_width="match_parent"
@@ -282,22 +282,6 @@
                 android:background="@android:color/darker_gray" />
 
             <!-- Calorie Constraints -->
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Enter Proteins"/>
-                <EditText
-                    android:id="@+id/constraint_Protein"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:text="xyz"/>
-            </LinearLayout>
 
             <TextView
                 android:id="@+id/calorieConstraints"
@@ -310,34 +294,90 @@
                 android:textAppearance="?android:textAppearanceLarge"
                 android:textSize="20dp" />
 
-
-            <EditText
-                android:id="@+id/constraint_fat"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="Total Fat" />
+                android:orientation="horizontal">
 
-            <EditText
-                android:id="@+id/constraint_carbs"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="Total Carbohydrates" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Total Proteins" />
 
-            <EditText
-                android:id="@+id/constraint_sugar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="Total Sugar" />
+                <EditText
+                    android:id="@+id/constraint_Protein"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp" />
+            </LinearLayout>
 
-            <EditText
-                android:id="@+id/constraint_calories"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="Total Calories" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Total Carbohydrates" />
+
+                <EditText
+                    android:id="@+id/constraint_carbs"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Total Sugar" />
+
+                <EditText
+                    android:id="@+id/constraint_sugar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Total Calories" />
+
+                <EditText
+                    android:id="@+id/constraint_calories"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Total Fat" />
+
+                <EditText
+                    android:id="@+id/constraint_fat"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp" />
+            </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
@@ -363,4 +403,3 @@
     </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
-
