--- a/app/src/main/res/layout/activity_result_display.xml
+++ b/app/src/main/res/layout/activity_result_display.xml
@@ -11,79 +11,88 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.eatright.eatright.ResultDisplayActivity">
-
     <com.android.volley.toolbox.NetworkImageView
         android:id="@+id/image1"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:layout_marginRight="2dp"
-        android:cropToPadding="true" />
+        android:layout_height="100dp"
+        android:layout_width="100dp"
+        android:cropToPadding="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:id="@+id/Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/image1"
-        android:paddingLeft="16dp"
         android:text="dish name"
-        android:textAppearance="@android:style/TextAppearance.Material.Title" />
+        android:paddingLeft="16dp"
+        android:textAppearance="@android:style/TextAppearance.Material.Title"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@+id/image1" />
 
     <TextView
         android:id="@+id/Description"
+        android:text="description of dish"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/Title"
-        android:layout_toEndOf="@+id/image1"
         android:paddingLeft="16dp"
-        android:text="description of dish" />
+        android:layout_below="@+id/Title"
+        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@+id/image1" />
+
+    <TextView
+        android:id="@+id/Type"
+        android:text="type of dish"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="16dp"
+        android:layout_below="@+id/Description"
+        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@+id/image1" />
 
     <TextView
         android:id="@+id/Ingredients"
+        android:text="List of all ingredients"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/Description"
-
-        android:layout_toEndOf="@+id/image1"
         android:paddingLeft="16dp"
-        android:text="List of all ingredients" />
+
+        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@+id/image1"
+        android:layout_below="@+id/Type" />
 
     <TextView
         android:id="@+id/Calories"
+        android:text="List of all calories"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/Ingredients"
-
-        android:layout_toEndOf="@+id/image1"
         android:paddingLeft="16dp"
-        android:text="List of all calories" />
+        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@+id/image1"
+        android:layout_below="@+id/Ingredients" />
 
 
     <Button
-        android:id="@+id/button2"
+        android:text="Back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_below="@+id/image1"
+        android:layout_alignParentStart="true"
         android:layout_marginTop="336dp"
-        android:text="Back" />
+        android:id="@+id/button2" />
 
 
     <TextView
         android:id="@+id/Reason"
+        android:text="Reason List"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/Description"
-        android:layout_toEndOf="@+id/image1"
         android:paddingLeft="16dp"
-        android:text="Reason to not eat this dish" />
+        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@+id/image1"
+        android:layout_below="@+id/Calories"
+         />
 
 
 </RelativeLayout>
