--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -1,19 +1,27 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
+    <com.android.volley.toolbox.NetworkImageView
+        android:id="@+id/networkImageView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_marginRight="2dp"
+        android:cropToPadding="true" />
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
-        android:layout_gravity="center"
         android:layout_width="fill_parent"
         android:layout_height="100dp"
+        android:layout_gravity="center"
         android:layout_margin="5dp"
+        android:foreground="?android:attr/selectableItemBackground"
         card_view:cardCornerRadius="2dp"
-        card_view:contentPadding="10dp"
-        android:foreground="?android:attr/selectableItemBackground">
+        card_view:contentPadding="10dp">
 
         <RelativeLayout
             android:layout_width="fill_parent"
@@ -42,6 +50,14 @@
                 android:layout_below="@+id/title"
                 android:layout_marginTop="10dp"
                 android:layout_toRightOf="@id/img" />
+
+            <com.android.volley.toolbox.NetworkImageView
+                android:id="@+id/img2"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="2dp"
+                android:cropToPadding="true" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
