--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,55 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/scrollView"
+
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="vertical"
-        android:weightSum="1">
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
+    android:weightSum="1">
 
 
-        <Button
-            android:id="@+id/buttonCondition"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:text="Condition" />
+    <Button
+        android:id="@+id/buttonCondition"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:text="Condition" />
 
-        <Button
-            android:id="@+id/buttonRestaurant"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Restaurant" />
+    <Button
+        android:id="@+id/buttonRestaurant"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Restaurant" />
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Recommender for you" />
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="195dp"
-            android:background="@color/cardview_light_background"
-            android:scrollbars="none" />
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Not Recommended for you" />
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_view2"
-            android:layout_width="match_parent"
-            android:layout_height="270dp"
-            android:background="@color/cardview_dark_background"
-            android:scrollbars="none" />
-
-    </LinearLayout>
-</ScrollView>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical" />
+</LinearLayout>
