--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -51,8 +51,9 @@
                 android:layout_marginTop="10dp"
                 android:layout_toRightOf="@id/img" />
 
-            <com.android.volley.toolbox.NetworkImageView
-                android:id="@+id/img2"
+
+            <ImageView
+                android:id="@+id/imageView2"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_alignParentRight="true"
