--- a/app/src/main/res/layout/content_preferences.xml
+++ b/app/src/main/res/layout/content_preferences.xml
@@ -9,10 +9,8 @@
     tools:showIn="@layout/activity_preferences">
 
     <ScrollView
-        android:layout_width="match_parent"
+        android:layout_width="395dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="-1dp"
-        android:layout_marginTop="-157dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -293,6 +291,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
+                    android:inputType="number"
                     android:maxLength="3" />
             </LinearLayout>
 
@@ -314,6 +313,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
+                    android:inputType="number"
                     android:maxLength="3" />
             </LinearLayout>
 
@@ -335,6 +335,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
+                    android:inputType="number"
                     android:maxLength="3" />
             </LinearLayout>
 
@@ -356,6 +357,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
+                    android:inputType="number"
                     android:maxLength="3" />
             </LinearLayout>
 
@@ -377,6 +379,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
+                    android:inputType="number"
                     android:maxLength="3" />
             </LinearLayout>
 
