--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,11 +4,11 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_preferences"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/preferences"
             android:title="Preferences" />
         <item
             android:id="@+id/nav_sign_out"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/signout"
             android:title="Sign out" />
     </group>
 </menu>
